environments/gloo-gateway-ui/additional-cluster-2/homer-app/base/homer-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: homer
  namespace: homer-portal
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateways/https-gateway
  http:
  - name: demo-dashboard
    match:
    - uri:
        prefix: "/solo"
    route:
    - destination:
        host: homer-portal
        port:
          number: 8080
